[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Command_line_Options"
version = "1.0.0"
authors = [
  { name="Eric Woll", email="" },
]
description = "A library making it easier to create small command-line option pickers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EricWoll/Command-Line-Options"
"Bug Tracker" = "https://github.com/EricWoll/Command-Line-Options/issues"